math-core/src/snapshots/math_core__tests__integral_with_bounds.snap
---
source: math-core/src/lib.rs
expression: "\\int_0^1 dx"
---
<math>
    <msubsup>
        <mo lspace="0">∫</mo>
        <mn>0</mn>
        <mn>1</mn>
    </msubsup>
    <mi>d</mi>
    <mi>x</mi>
</math>
