math-core/src/snapshots/math_core__tests__integral_with_complex_bound.snap
---
source: math-core/src/lib.rs
expression: "\\int_{0+1}^\\infty"
---
<math>
    <msubsup>
        <mo lspace="0" rspace="0">∫</mo>
        <mrow>
            <mn>0</mn>
            <mo>+</mo>
            <mn>1</mn>
        </mrow>
        <mi>∞</mi>
    </msubsup>
</math>
