math-core/src/snapshots/math_core__tests__integral_with_reversed_bounds.snap
---
source: math-core/src/lib.rs
expression: "\\int^1_0 dx"
---
<math>
    <msubsup>
        <mo lspace="0">∫</mo>
        <mn>0</mn>
        <mn>1</mn>
    </msubsup>
    <mi>d</mi>
    <mi>x</mi>
</math>
