math-core/src/snapshots/math_core__tests__integral_with_reversed_limits.snap
---
source: math-core/src/lib.rs
expression: "\\int\\limits^1_0 dx"
---
<math>
    <munderover>
        <mo>∫</mo>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
    <mi>d</mi>
    <mi>x</mi>
</math>
