math-core/src/snapshots/math_core__tests__integral_with_upper_bound.snap
---
source: math-core/src/lib.rs
expression: "\\int^1 dx"
---
<math>
    <msup>
        <mo>∫</mo>
        <mn>1</mn>
    </msup>
    <mi>d</mi>
    <mi>x</mi>
</math>
