math-core/src/snapshots/math_core__tests__integral_with_upper_limit.snap
---
source: math-core/src/lib.rs
expression: "\\int\\limits^1 dx"
---
<math>
    <mover>
        <mo>∫</mo>
        <mn>1</mn>
    </mover>
    <mi>d</mi>
    <mi>x</mi>
</math>
