math-core/src/snapshots/math_core__tests__invalid_sub_sup.snap
---
source: math-core/src/lib.rs
expression: x^_
---
Position: 2
CannotBeUsedHere {
    got: Underscore,
    correct_place: AfterOpOrIdent,
}
