math-core/src/snapshots/math_core__tests__invalid_sup.snap
---
source: math-core/src/lib.rs
expression: x^^
---
Position: 2
CannotBeUsedHere {
    got: Circumflex,
    correct_place: AfterOpOrIdent,
}
