math-core/src/snapshots/math_core__tests__lbrack_instead_of_bracket.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt\\lbrack 4]{2}"
---
<math>
    <msqrt>
        <mo stretchy="false">[</mo>
    </msqrt>
    <mn>4</mn>
    <mo stretchy="false">]</mo>
    <mn>2</mn>
</math>
